--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="./font-awesome-4.6.1/css/font-awesome.min.css">
 </head>
-<body>
+<body background="./img/slide-bg-complexity.jpg">
 	<section>
 		<nav>
 			<a href=""><img src="./img/comverse-logo.png" alt="comverse logo"></a>
@@ -25,6 +25,74 @@
 				<i class="fa fa-search" aria-hidden="true"></i>
 			</button>
 		</form>
-	</section>
+
+		<main>
+			<section >
+				<h1>Free Your Markets From IT Complexity</h1>
+				<h4>Comverse Policy Studio <span id="1st">1st</span> Marketing-Oriented Policy Tool</h4>
+				<a href="">LEARN MORE &#9654;</a>
+
+				<aside>
+					<article>
+						<h3>Comverse is value-added service global market leader.</h3>
+						<a href=""><i class="fa fa-file-text-o" aria-hidden="true"></i> Read more</a>
+					</article>	
+					<article>
+						<h3>Managed services world congress september 18-19 Berlin, Germany</h3>
+						<a href=""><i class="fa fa-file-text-o" aria-hidden="true"></i> Read more</a>
+					</article>
+					<article>
+						<h3>Comverse: Enabling a world of connected possibilities</h3>
+						<a href=""><i class="fa fa-play-circle" aria-hidden="true"></i> Watch Now</a>
+					</article>
+				</aside>
+			</section>
+		</main>
+
+		<div>
+
+		<section>
+			<dl>
+				<dd>KEY SOLUTIONS</dd>
+				<li><a href="">Monetizig Data</a></li>
+				<li><a href="">Over the Top (OTT)</a></li>
+				<li><a href="">Machine to Machine (M2M)</a></li>
+				<li><a href="">Cloud Computing</a></li>
+				<li><a href="">Managed Services</a></li>
+				<li><a href="">Customer Experince Management</a></li>
+				<li><a href="">Rich Communication Suite (RSC)</a></li>
+				<li><a href="">Social Media</a></li>
+				<li><a href=""></a>4G/LTE</li>
+			</dl>	
+			<dl>
+				<dd>PRODUCTS & SERVICES</dd>
+				<li><a href="">Billing</a></li>
+				<li><a href="">VAS</a></li>
+				<li><a href="">Mobile Internet</a></li>
+				<li><a href="">Global Services</a></li>
+				<li><a href="">Training Services</a></li>
+			</dl>
+			<dl>
+				<dd>COMPANY</dd>
+				<li><a href="">executive profiles</a></li>
+				<li><a href="">clients</a></li>
+				<li><a href="">investors</a></li>
+				<li><a href="">partners</a></li>
+				<li><a href="">corporate responsibility</a></li>
+				<li><a href="">industry involvement</a></li>
+				<li><a href="">careers</a></li>
+			</dl>
+			</aside>
+				<article>
+					<a class="title1" href="">LATEST BLOG POSTS</a>
+					<p><span>18<br>July</span>Comverse regains lead in convergent charging market</p>
+				</article>
+				<form method="post">
+					<label for="sign-up">SUBSCRIBE TO COMVERSE</label>
+					<input placeholder="user@gmail.com"></input>
+					<button class="blue-bg" type="submit">SIGN UP</button>
+				</form>
+			<aside>
+		</div>
 </body>
 </html>
