--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 			<label for="login">Customer login</label>
 			<input id="login"></input>
 			<button type="submit">
-				<i class="fa fa-search" aria-hidden="true"></i>
+				<!-- <i class="fa fa-search" aria-hidden="true"></i> -->
+				<img src="./img/searchBtn.png" alt="search icon">
 			</button>
 		</form>
 
@@ -30,12 +31,14 @@
 			<section >
 				<h1>Free Your Markets From IT Complexity</h1>
 				<h4>Comverse Policy Studio <span id="1st">1st</span> Marketing-Oriented Policy Tool</h4>
-				<a href="">LEARN MORE &#9654;</a>
+				<a href="" class="main-link">LEARN MORE <img src="./img/btnArrow.png" alt="right arrow icon"></a>
 
 				<aside>
 					<article>
 						<h3>Comverse is value-added service global market leader.</h3>
-						<a href=""><i class="fa fa-file-text-o" aria-hidden="true"></i> Read more</a>
+						<a href="">
+						<!-- <i class="fa fa-file-text-o" aria-hidden="true"></i>  -->
+						<img src="./img/link-icon-image.png" alt="link icon">Read more</a>
 					</article>	
 					<article>
 						<h3>Managed services world congress september 18-19 Berlin, Germany</h3>
@@ -47,41 +50,105 @@
 					</article>
 				</aside>
 			</section>
+			<section>
+				<h2>WHAT CAN WE DO FOR YOU?</h2>
+				<nav>
+					<a href=""><img src="./img/solution_icon_smart-money.png" alt="solution money icon"><br>Data monetization</a>
+					<a href=""><img src="./img/comverse-logo.png" alt="comverse logo"><br>Machine to machine (M2M)</a>
+					<a href=""><img src="./img/ourSolutions-OOT-icon.png" alt="OTT icon"><br>Over-the-top (OTT)</a>
+					<a href=""><img src="./img/comverse-logo.png" alt="comverse logo"><br>Cloud computing</a>
+					<a href=""><img src="./img/comverse-logo.png" alt="comverse logo"><br>Managed services</a>
+					<a href=""><img src="./img/comverse-logo.png" alt="comverse logo"><br>Social Media</a>
+				</nav>
+					<a href="" class="main-link">See all of our solutions <img src="./img/btnArrow.png" alt="right arrow icon"></a>
+			</section>
+			<aside>
+				<h2>SUCCESS STORIES</h2>
+				<article>
+					<section>
+						<img src="" alt="story image" class="story-img">
+						<p><img src="./img/quote-grey.png"> We have very good and very warm relations with Comverse. We always achieved...</p>
+					</section>
+					<footer>
+						<a href="" class="story-link">SERGEY KOROTYCH</a>
+						<br>
+						<h4>Deputy CTO,3 Mob Ukraine</h4>
+						<a href=""><img src="./img/3mob_w108px_X_h95px.jpg" alt="Mob-icon"></a>
+					</footer>
+				</article>
+				<div class="chained-logos">
+					<a href=""><img src="" alt="logo"></a>
+					<a href=""><img src="" alt="logo"></a>
+					<a href=""><img src="" alt="logo"></a>
+				</div>
+				<div class="chained-logos">
+					<a href=""><img src="" alt="logo"></a>
+					<a href=""><img src="" alt="logo"></a>
+					<a href=""><img src="" alt="logo"></a>
+				</div>
+				<article>
+					<section>
+						<img src="" alt="story image" class="story-img">
+						<p>Comverse has demonstrated that they are partners, not just suppliers, because they understand our needs, our situation; together we are...</p>
+					</section>
+					<footer>
+						<a href="" class="story-link">ADALE KEHASSAN</a>
+						<br>
+						<h4>CIO of Multi-links</h4>
+						<a href=""><img src="./img/3mob_w108px_X_h95px.jpg" alt="Mob-icon"></a>
+					</footer>
+				</article>
+				<article>
+					<section>
+						<p><img src="./img/quote-grey.png">Comverse has been able to fully deliver what we want and we have peers...</p>
+					</section>
+					<footer>
+						<a href="" class="story-link">SERGEY KOROTYCH</a>
+						<br>
+						<h4>Deputy CTO,3 Mob Ukraine</h4>
+						<a href=""><img src="./img/3mob_w108px_X_h95px.jpg" alt="Mob-icon"></a>
+					</footer>
+				</article>
+				<div class="chained-logos">
+					<a href=""><img src="" alt="logo"></a>
+					<a href=""><img src="" alt="logo"></a>
+				</div>
+				<a href="" class="main-link">All 256 success stories</a>
+			</aside>
 		</main>
-
 		<div>
-
-		<section>
-			<dl>
-				<dd>KEY SOLUTIONS</dd>
-				<li><a href="">Monetizig Data</a></li>
-				<li><a href="">Over the Top (OTT)</a></li>
-				<li><a href="">Machine to Machine (M2M)</a></li>
-				<li><a href="">Cloud Computing</a></li>
-				<li><a href="">Managed Services</a></li>
-				<li><a href="">Customer Experince Management</a></li>
-				<li><a href="">Rich Communication Suite (RSC)</a></li>
-				<li><a href="">Social Media</a></li>
-				<li><a href=""></a>4G/LTE</li>
-			</dl>	
-			<dl>
-				<dd>PRODUCTS & SERVICES</dd>
-				<li><a href="">Billing</a></li>
-				<li><a href="">VAS</a></li>
-				<li><a href="">Mobile Internet</a></li>
-				<li><a href="">Global Services</a></li>
-				<li><a href="">Training Services</a></li>
-			</dl>
-			<dl>
-				<dd>COMPANY</dd>
-				<li><a href="">executive profiles</a></li>
-				<li><a href="">clients</a></li>
-				<li><a href="">investors</a></li>
-				<li><a href="">partners</a></li>
-				<li><a href="">corporate responsibility</a></li>
-				<li><a href="">industry involvement</a></li>
-				<li><a href="">careers</a></li>
-			</dl>
+			<section>
+				<dl>
+					<dd>KEY SOLUTIONS</dd>
+					<li><a href="">Monetizig Data</a></li>
+					<li><a href="">Over the Top (OTT)</a></li>
+					<li><a href="">Machine to Machine (M2M)</a></li>
+					<li><a href="">Cloud Computing</a></li>
+					<li><a href="">Managed Services</a></li>
+					<li><a href="">Customer Experince Management</a></li>
+					<li><a href="">Rich Communication Suite (RSC)</a></li>
+					<li><a href="">Social Media</a></li>
+					<li><a href=""></a>4G/LTE</li>
+				</dl>	
+				<dl>
+					<dd>PRODUCTS & SERVICES</dd>
+					<li><a href="">Billing</a></li>
+					<li><a href="">VAS</a></li>
+					<li><a href="">Mobile Internet</a></li>
+					<li><a href="">Global Services</a></li>
+					<li><a href="">Training Services</a></li>
+				</dl>
+				<dl>
+					<dd>COMPANY</dd>
+					<li><a href="">executive profiles</a></li>
+					<li><a href="">clients</a></li>
+					<li><a href="">investors</a></li>
+					<li><a href="">partners</a></li>
+					<li><a href="">corporate responsibility</a></li>
+					<li><a href="">industry involvement</a></li>
+					<li><a href="">careers</a></li>
+				</dl>
+			</section>
 			</aside>
 				<article>
 					<a class="title1" href="">LATEST BLOG POSTS</a>
@@ -92,7 +159,7 @@
 					<input placeholder="user@gmail.com"></input>
 					<button class="blue-bg" type="submit">SIGN UP</button>
 				</form>
-			<aside>
+			</aside>>
 		</div>
-</body>
+	</body>
 </html>
