--- a/routes/index.html
+++ b/routes/index.html
@@ -3,11 +3,13 @@
 <head>
 	<title>comverse</title>
 	<meta charset="UTF-8">
+	<link rel="stylesheet" type="text/css" href="../font-awesome-4.6.1/css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
-<body>
+<body background="../img/slide-bg-complexity.jpg">
 	<section>
 		<nav>
-			<a href=""><img src="comverse-logo.png" alt="comverse logo"></a>
+			<a href=""><img src="../img/comverse-logo.png" alt="comverse logo"></a>
 			<a href="">YOUR NEEDS</a>
 			<a href="">OUR PORTFOLIO</a>
 			<a href="">NEWS & MEDIA</a>
@@ -21,9 +23,163 @@
 			<label for="login">Customer login</label>
 			<input id="login"></input>
 			<button type="submit">
-				<i class="fa fa-search" aria-hidden="true"></i>
+				<!-- <i class="fa fa-search" aria-hidden="true"></i> -->
+				<img src="../img/searchBtn.png" alt="search icon">
 			</button>
 		</form>
-	</section>
-</body>
+		<main>
+			<section >
+				<h1>Free Your Markets From IT Complexity</h1>
+				<h4>Comverse Policy Studio <span id="1st">1st</span> Marketing-Oriented Policy Tool</h4>
+				<a href="" class="main-link">LEARN MORE <img src="../img/btnArrow.png" alt="right arrow icon"></a>
+				<aside>
+					<article id="article-1">
+						<h3>Comverse is value-added service global market leader.</h3>
+						<a href="">
+						<!-- <i class="fa fa-file-text-o" aria-hidden="true"></i>  -->
+						<img src="../img/link-icon-image.png" alt="link icon">Read more</a>
+					</article>	
+					<article id="article-2">
+						<h3>Managed services world congress september 18-19 Berlin, Germany</h3>
+						<a href=""><i class="fa fa-file-text-o" aria-hidden="true"></i> Read more</a>
+					</article>
+					<article id="article-3">
+						<h3>Comverse: Enabling a world of connected possibilities</h3>
+						<a href=""><i class="fa fa-play-circle" aria-hidden="true"></i> Watch Now</a>
+					</article>
+				</aside>
+			</section>
+			<section>
+				<h2>WHAT CAN WE DO FOR YOU?</h2>
+				<nav>
+					<a href=""><img src="../img/solution_icon_smart-money.png" alt="solution money icon"><br>Data monetization</a>
+					<a href=""><img src="../img/comverse-logo.png" alt="comverse logo"><br>Machine to machine (M2M)</a>
+					<a href=""><img src="../img/ourSolutions-OOT-icon.png" alt="OTT icon"><br>Over-the-top (OTT)</a>
+					<a href=""><img src="../img/comverse-logo.png" alt="comverse logo"><br>Cloud computing</a>
+					<a href=""><img src="../img/comverse-logo.png" alt="comverse logo"><br>Managed services</a>
+					<a href=""><img src="../img/comverse-logo.png" alt="comverse logo"><br>Social Media</a>
+				</nav>
+					<a href="" class="main-link">See all of our solutions <img src="./img/btnArrow.png" alt="right arrow icon"></a>
+			</section>
+			<section>
+				<h2>WHAT'S HAPPENING AT COMVERSE?</h2>
+				<dl>
+					<dd>NEWS</dd>
+					<li>
+						<p><span class="marked-date">04 <br> SEP</span> Comverse Regains Lead in Convergent Charging Market Regains Lead in</p>
+						<a href=""><img src="../img/eventListIconNews.png" alt="news icon"> All news</a>
+					</li>
+				</dl>
+				<dl>
+					<dd>EVENTS</dd>
+					<li>
+						<p><span class="marked-date">04 <br> SEP</span> Comverse Regains Lead in Convergent Charging Market Regains Lead in</p>
+						<a href=""><img src="../img/eventListIconEvents.png" alt="events icon"> All events</a>
+					</li>				
+					<li>
+						<p><span class="marked-date">04 <br> SEP</span> Comverse Regains Lead in Convergent Charging Market Regains Lead in</p>
+						<a href=""><img src="../img/eventListIconEvents.png" alt="events icon"> All events</a>
+					</li>
+				</dl>
+			</section>
+			<aside>
+				<h2>SUCCESS STORIES</h2>
+				<article>
+					<section>
+						<img src="" alt="story image" class="story-img">
+						<p><img src="../img/quote-grey.png"> We have very good and very warm relations with Comverse. We always achieved...</p>
+					</section>
+					<footer>
+						<a href="" class="story-link">SERGEY KOROTYCH</a>
+						<br>
+						<h4>Deputy CTO,3 Mob Ukraine</h4>
+						<a href=""><img src="../img/3mob_w108px_X_h95px.jpg" alt="Mob-icon"></a>
+					</footer>
+				</article>
+				<div class="chained-logos">
+					<a href=""><img src="" alt="logo"></a>
+					<a href=""><img src="" alt="logo"></a>
+					<a href=""><img src="" alt="logo"></a>
+				</div>
+				<div class="chained-logos">
+					<a href=""><img src="" alt="logo"></a>
+					<a href=""><img src="" alt="logo"></a>
+					<a href=""><img src="" alt="logo"></a>
+				</div>
+				<article>
+					<section>
+						<img src="" alt="story image" class="story-img">
+						<p>Comverse has demonstrated that they are partners, not just suppliers, because they understand our needs, our situation; together we are...</p>
+					</section>
+					<footer>
+						<a href="" class="story-link">ADALE KEHASSAN</a>
+						<br>
+						<h4>CIO of Multi-links</h4>
+						<a href=""><img src="../img/3mob_w108px_X_h95px.jpg" alt="Mob-icon"></a>
+					</footer>
+				</article>
+				<article>
+					<section>
+						<p><img src="../img/quote-grey.png">Comverse has been able to fully deliver what we want and we have peers...</p>
+					</section>
+					<footer>
+						<a href="" class="story-link">SERGEY KOROTYCH</a>
+						<br>
+						<h4>Deputy CTO,3 Mob Ukraine</h4>
+						<a href=""><img src="../img/3mob_w108px_X_h95px.jpg" alt="Mob-icon"></a>
+					</footer>
+				</article>
+				<div class="chained-logos">
+					<a href=""><img src="" alt="logo"></a>
+					<a href=""><img src="" alt="logo"></a>
+				</div>
+				<a href="" class="main-link">All 256 success stories</a>
+			</aside>
+		</main>
+		<div>
+			<section>
+				<dl>
+					<dd>KEY SOLUTIONS</dd>
+					<li><a href="">Monetizig Data</a></li>
+					<li><a href="">Over the Top (OTT)</a></li>
+					<li><a href="">Machine to Machine (M2M)</a></li>
+					<li><a href="">Cloud Computing</a></li>
+					<li><a href="">Managed Services</a></li>
+					<li><a href="">Customer Experince Management</a></li>
+					<li><a href="">Rich Communication Suite (RSC)</a></li>
+					<li><a href="">Social Media</a></li>
+					<li><a href=""></a>4G/LTE</li>
+				</dl>	
+				<dl>
+					<dd>PRODUCTS & SERVICES</dd>
+					<li><a href="">Billing</a></li>
+					<li><a href="">VAS</a></li>
+					<li><a href="">Mobile Internet</a></li>
+					<li><a href="">Global Services</a></li>
+					<li><a href="">Training Services</a></li>
+				</dl>
+				<dl>
+					<dd>COMPANY</dd>
+					<li><a href="">executive profiles</a></li>
+					<li><a href="">clients</a></li>
+					<li><a href="">investors</a></li>
+					<li><a href="">partners</a></li>
+					<li><a href="">corporate responsibility</a></li>
+					<li><a href="">industry involvement</a></li>
+					<li><a href="">careers</a></li>
+				</dl>
+			</section>
+			</aside>
+				<article>
+					<a class="title1" href="">LATEST BLOG POSTS</a>
+					<p><span>18<br>July</span>Comverse regains lead in convergent charging market</p>
+				</article>
+				<form method="post">
+					<label for="sign-up">SUBSCRIBE TO COMVERSE</label>
+					<input placeholder="user@gmail.com"></input>
+					<button class="blue-bg" type="submit">SIGN UP</button>
+				</form>
+			</aside>>
+		</div>
+	</body>
 </html>
