--- a/routes/index.html
+++ b/routes/index.html
@@ -27,8 +27,8 @@
 				<img src="../img/searchBtn.png" alt="search icon">
 			</button>
 		</form>
-		<main>
-			<section >
+		<main id="main">
+			<section id="first-sec">
 				<h1>Free Your Markets From IT Complexity</h1>
 				<h4>Comverse Policy Studio <span id="1st">1st</span> Marketing-Oriented Policy Tool</h4>
 				<a href="" class="main-link">LEARN MORE <img src="../img/btnArrow.png" alt="right arrow icon"></a>
@@ -49,7 +49,7 @@
 					</article>
 				</aside>
 			</section>
-			<section>
+			<section class="white-sec" id="second-sec">
 				<h2>WHAT CAN WE DO FOR YOU?</h2>
 				<nav>
 					<a href=""><img src="../img/solution_icon_smart-money.png" alt="solution money icon"><br>Data monetization</a>
@@ -59,9 +59,9 @@
 					<a href=""><img src="../img/comverse-logo.png" alt="comverse logo"><br>Managed services</a>
 					<a href=""><img src="../img/comverse-logo.png" alt="comverse logo"><br>Social Media</a>
 				</nav>
-					<a href="" class="main-link">See all of our solutions <img src="./img/btnArrow.png" alt="right arrow icon"></a>
+					<a href="" class="main-link">See all of our solutions <img src="../img/btnArrow.png" alt="right arrow icon"></a>
 			</section>
-			<section>
+			<section class="white-sec" id="third-sec">
 				<h2>WHAT'S HAPPENING AT COMVERSE?</h2>
 				<dl>
 					<dd>NEWS</dd>
@@ -82,7 +82,7 @@
 					</li>
 				</dl>
 			</section>
-			<aside>
+			<aside id="aside-sec">
 				<h2>SUCCESS STORIES</h2>
 				<article>
 					<section>
@@ -90,29 +90,29 @@
 						<p><img src="../img/quote-grey.png"> We have very good and very warm relations with Comverse. We always achieved...</p>
 					</section>
 					<footer>
-						<a href="" class="story-link">SERGEY KOROTYCH</a>
+						<a href="">SERGEY KOROTYCH</a>
 						<br>
 						<h4>Deputy CTO,3 Mob Ukraine</h4>
 						<a href=""><img src="../img/3mob_w108px_X_h95px.jpg" alt="Mob-icon"></a>
 					</footer>
 				</article>
-				<div class="chained-logos">
-					<a href=""><img src="" alt="logo"></a>
-					<a href=""><img src="" alt="logo"></a>
-					<a href=""><img src="" alt="logo"></a>
-				</div>
-				<div class="chained-logos">
-					<a href=""><img src="" alt="logo"></a>
-					<a href=""><img src="" alt="logo"></a>
-					<a href=""><img src="" alt="logo"></a>
-				</div>
+					<ul>
+						<li><a href=""><img src="" alt="logo"></a></li>
+						<li><a href=""><img src="" alt="logo"></a></li>
+						<li><a href=""><img src="" alt="logo"></a></li>
+					</ul>
+					<ul>
+						<li><a href=""><img src="" alt="logo"></a></li>
+						<li><a href=""><img src="" alt="logo"></a></li>
+						<li><a href=""><img src="" alt="logo"></a></li>
+					</ul>
 				<article>
 					<section>
 						<img src="" alt="story image" class="story-img">
 						<p>Comverse has demonstrated that they are partners, not just suppliers, because they understand our needs, our situation; together we are...</p>
 					</section>
 					<footer>
-						<a href="" class="story-link">ADALE KEHASSAN</a>
+						<a href="">ADALE KEHASSAN</a>
 						<br>
 						<h4>CIO of Multi-links</h4>
 						<a href=""><img src="../img/3mob_w108px_X_h95px.jpg" alt="Mob-icon"></a>
@@ -129,14 +129,14 @@
 						<a href=""><img src="../img/3mob_w108px_X_h95px.jpg" alt="Mob-icon"></a>
 					</footer>
 				</article>
-				<div class="chained-logos">
+				<div>
 					<a href=""><img src="" alt="logo"></a>
 					<a href=""><img src="" alt="logo"></a>
 				</div>
 				<a href="" class="main-link">All 256 success stories</a>
 			</aside>
 		</main>
-		<div>
+		<div class="white-sec">
 			<section>
 				<dl>
 					<dd>KEY SOLUTIONS</dd>
@@ -175,7 +175,7 @@
 					<p><span>18<br>July</span>Comverse regains lead in convergent charging market</p>
 				</article>
 				<form method="post">
-					<label for="sign-up">SUBSCRIBE TO COMVERSE</label>
+					<label for="sign-up" class="title1">SUBSCRIBE TO COMVERSE</label>
 					<input placeholder="user@gmail.com"></input>
 					<button class="blue-bg" type="submit">SIGN UP</button>
 				</form>
