--- a/routes/index.html
+++ b/routes/index.html
@@ -3,11 +3,11 @@
 <head>
 	<title>comverse</title>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" type="text/css" href="../font-awesome-4.6.1/css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="../css/font-awesome-4.6.1/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 <body background="../img/slide-bg-complexity.jpg">
-	<section>
+	<section id="top-sec">
 		<nav>
 			<a href=""><img src="../img/comverse-logo.png" alt="comverse logo"></a>
 			<a href="">YOUR NEEDS</a>
@@ -27,27 +27,28 @@
 				<img src="../img/searchBtn.png" alt="search icon">
 			</button>
 		</form>
+	</section>
 		<main id="main">
 			<section id="first-sec">
 				<h1>Free Your Markets From IT Complexity</h1>
-				<h4>Comverse Policy Studio <span id="1st">1st</span> Marketing-Oriented Policy Tool</h4>
+				<p>Comverse Policy Studio <br><strong>1st</strong> Ever Marketing-Oriented Policy Tool</p>
 				<a href="" class="main-link">LEARN MORE <img src="../img/btnArrow.png" alt="right arrow icon"></a>
-				<aside>
-					<article id="article-1">
+				<ul>
+					<li id="article-1">
 						<h3>Comverse is value-added service global market leader.</h3>
 						<a href="">
 						<!-- <i class="fa fa-file-text-o" aria-hidden="true"></i>  -->
-						<img src="../img/link-icon-image.png" alt="link icon">Read more</a>
-					</article>	
-					<article id="article-2">
+						<img src="../img/.png" alt="link icon">Read more</a>
+					</li>	
+					<li id="article-2">
 						<h3>Managed services world congress september 18-19 Berlin, Germany</h3>
 						<a href=""><i class="fa fa-file-text-o" aria-hidden="true"></i> Read more</a>
-					</article>
-					<article id="article-3">
+					</li>
+					<li id="article-3">
 						<h3>Comverse: Enabling a world of connected possibilities</h3>
 						<a href=""><i class="fa fa-play-circle" aria-hidden="true"></i> Watch Now</a>
-					</article>
-				</aside>
+					</li>
+				</ul>
 			</section>
 			<section class="white-sec" id="second-sec">
 				<h2>WHAT CAN WE DO FOR YOU?</h2>
