--- a/routes/index.html
+++ b/routes/index.html
@@ -33,13 +33,14 @@
 				<h1>Free Your Markets From IT Complexity</h1>
 				<p>Comverse Policy Studio <br><strong>1st</strong> Ever Marketing-Oriented Policy Tool</p>
 				<a href="" class="main-link">LEARN MORE <img src="../img/btnArrow.png" alt="right arrow icon"></a>
+				<div>
 				<ul>
 					<li id="article-1">
 						<h3>Comverse is value-added service global market leader.</h3>
 						<a href="">
 						<!-- <i class="fa fa-file-text-o" aria-hidden="true"></i>  -->
 						<img src="../img/.png" alt="link icon">Read more</a>
-					</li>	
+					</li><
 					<li id="article-2">
 						<h3>Managed services world congress september 18-19 Berlin, Germany</h3>
 						<a href=""><i class="fa fa-file-text-o" aria-hidden="true"></i> Read more</a>
@@ -49,6 +50,7 @@
 						<a href=""><i class="fa fa-play-circle" aria-hidden="true"></i> Watch Now</a>
 					</li>
 				</ul>
+				</div>
 			</section>
 			<section class="white-sec" id="second-sec">
 				<h2>WHAT CAN WE DO FOR YOU?</h2>
