--- a/routes/index.html
+++ b/routes/index.html
@@ -8,25 +8,27 @@
 </head>
 <body background="../img/slide-bg-complexity.jpg">
 	<section id="top-sec">
-		<nav>
-			<a href=""><img src="../img/comverse-logo.png" alt="comverse logo"></a>
-			<a href="">YOUR NEEDS</a>
-			<a href="">OUR PORTFOLIO</a>
-			<a href="">NEWS & MEDIA</a>
-			<a href="">ABOUT COMVERSE</a>
-		</nav>
-		<form method="post">
-			<select>
-				<option value="EN" selected>EN</option>
-				<option value="HE">HE</option>
-			</select>
-			<label for="login">Customer login</label>
-			<input id="login"></input>
-			<button type="submit">
-				<!-- <i class="fa fa-search" aria-hidden="true"></i> -->
-				<img src="../img/searchBtn.png" alt="search icon">
-			</button>
-		</form>
+		<div>
+			<nav>
+				<a href=""><img src="../img/comverse-logo.png" alt="comverse logo"></a>
+				<a href="">YOUR NEEDS</a>
+				<a href="">OUR PORTFOLIO</a>
+				<a href="">NEWS & MEDIA</a>
+				<a href="">ABOUT COMVERSE</a>
+			</nav>
+			<form method="post">
+				<select>
+					<option value="EN" selected>EN</option>
+					<option value="HE">HE</option>
+				</select>
+				<label for="login">Customer login</label>
+				<input id="login"></input>
+				<button type="submit">
+					<!-- <i class="fa fa-search" aria-hidden="true"></i> -->
+					<img src="../img/searchBtn.png" alt="search icon">
+				</button>
+			</form>
+		</div>
 	</section>
 		<main id="main">
 			<section id="first-sec">
