--- a/routes/index.html
+++ b/routes/index.html
@@ -141,7 +141,7 @@
 				<a href="" class="main-link">All 256 success stories</a>
 			</aside>
 		</main>
-		<div class="white-sec">
+		<div id="bottom" class="white-sec">
 			<section>
 				<dl>
 					<dd>KEY SOLUTIONS</dd>
