--- a/routes/index.html
+++ b/routes/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="../css/font-awesome-4.6.1/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
-<body background="../img/slide-bg-complexity.jpg">
+<body>
 	<section id="top-sec">
 		<div>
 			<nav>
@@ -31,27 +31,27 @@
 		</div>
 	</section>
 		<main id="main">
-			<section id="first-sec">
-				<h1>Free Your Markets From IT Complexity</h1>
+			<section id="first-sec" class="white-sec">
+				<h1><strong>Free</strong> Your Markets From IT <strong>Complexity</strong></h1>
 				<p>Comverse Policy Studio <br><strong>1st</strong> Ever Marketing-Oriented Policy Tool</p>
 				<a href="" class="main-link">LEARN MORE <img src="../img/btnArrow.png" alt="right arrow icon"></a>
 				<div>
-				<ul>
-					<li id="article-1">
-						<h3>Comverse is value-added service global market leader.</h3>
-						<a href="">
-						<!-- <i class="fa fa-file-text-o" aria-hidden="true"></i>  -->
-						<img src="../img/.png" alt="link icon">Read more</a>
-					</li><
-					<li id="article-2">
-						<h3>Managed services world congress september 18-19 Berlin, Germany</h3>
-						<a href=""><i class="fa fa-file-text-o" aria-hidden="true"></i> Read more</a>
-					</li>
-					<li id="article-3">
-						<h3>Comverse: Enabling a world of connected possibilities</h3>
-						<a href=""><i class="fa fa-play-circle" aria-hidden="true"></i> Watch Now</a>
-					</li>
-				</ul>
+					<ul>
+						<li id="article-1">
+							<h3>Comverse is value-added service global market leader.</h3>
+							<a href="">
+							<!-- <i class="fa fa-file-text-o" aria-hidden="true"></i>  -->
+							<img src="../img/.png" alt="link icon">Read more</a>
+						</li><
+						<li id="article-2">
+							<h3>Managed services world congress september 18-19 Berlin, Germany</h3>
+							<a href=""><i class="fa fa-file-text-o" aria-hidden="true"></i> Read more</a>
+						</li>
+						<li id="article-3">
+							<h3>Comverse: Enabling a world of connected possibilities</h3>
+							<a href=""><i class="fa fa-play-circle" aria-hidden="true"></i> Watch Now</a>
+						</li>
+					</ul>
 				</div>
 			</section>
 			<section class="white-sec" id="second-sec">
@@ -71,18 +71,18 @@
 				<dl>
 					<dd>NEWS</dd>
 					<li>
-						<p><span class="marked-date">04 <br> SEP</span> Comverse Regains Lead in Convergent Charging Market Regains Lead in</p>
+						<p><span class="marked-date"><span class="day">04</span> <br> SEP</span> Comverse Regains Lead in Convergent Charging Market Regains Lead in</p>
 						<a href=""><img src="../img/eventListIconNews.png" alt="news icon"> All news</a>
 					</li>
 				</dl>
 				<dl>
 					<dd>EVENTS</dd>
 					<li>
-						<p><span class="marked-date">04 <br> SEP</span> Comverse Regains Lead in Convergent Charging Market Regains Lead in</p>
+						<p><span class="marked-date"><span class="day">04</span> <br> SEP</span> Comverse Regains Lead in Convergent Charging Market Regains Lead in</p>
 						<a href=""><img src="../img/eventListIconEvents.png" alt="events icon"> All events</a>
 					</li>				
 					<li>
-						<p><span class="marked-date">04 <br> SEP</span> Comverse Regains Lead in Convergent Charging Market Regains Lead in</p>
+						<p><span class="marked-date"><span class="day">04</span> <br> SEP</span> Comverse Regains Lead in Convergent Charging Market Regains Lead in</p>
 						<a href=""><img src="../img/eventListIconEvents.png" alt="events icon"> All events</a>
 					</li>
 				</dl>
