--- a/routes/index.html
+++ b/routes/index.html
@@ -56,7 +56,7 @@
 			</section>
 			<section class="white-sec" id="second-sec">
 				<h2>WHAT CAN WE DO FOR YOU?</h2>
-				<nav>
+				<nav class="main-nav">
 					<a href=""><img src="../img/solution_icon_smart-money.png" alt="solution money icon"><br>Data monetization</a>
 					<a href=""><img src="../img/comverse-logo.png" alt="comverse logo"><br>Machine to machine (M2M)</a>
 					<a href=""><img src="../img/ourSolutions-OOT-icon.png" alt="OTT icon"><br>Over-the-top (OTT)</a>
