--- a/routes/index.html
+++ b/routes/index.html
@@ -9,49 +9,53 @@
 <body>
 	<section id="top-sec">
 		<div>
-			<nav>
-				<a href=""><img src="../img/comverse-logo.png" alt="comverse logo"></a>
-				<a href="">YOUR NEEDS</a>
-				<a href="">OUR PORTFOLIO</a>
-				<a href="">NEWS & MEDIA</a>
-				<a href="">ABOUT COMVERSE</a>
-			</nav>
-			<form method="post">
-				<select>
-					<option value="EN" selected>EN</option>
-					<option value="HE">HE</option>
-				</select>
-				<label for="login">Customer login</label>
-				<input id="login"></input>
-				<button type="submit">
-					<!-- <i class="fa fa-search" aria-hidden="true"></i> -->
-					<img src="../img/searchBtn.png" alt="search icon">
-				</button>
-			</form>
+			<div class="padding">
+				<nav>
+					<a href=""><img src="../img/comverse-logo.png" alt="comverse logo"></a>
+					<a href="">YOUR NEEDS</a>
+					<a href="">OUR PORTFOLIO</a>
+					<a href="">NEWS & MEDIA</a>
+					<a href="">ABOUT COMVERSE</a>
+				</nav>
+				<form method="post">
+					<select>
+						<option value="EN" selected>EN</option>
+						<option value="HE">HE</option>
+					</select>
+					<label for="login">Customer login</label>
+					<input id="login"></input>
+					<button type="submit">
+						<!-- <i class="fa fa-search" aria-hidden="true"></i> -->
+						<img src="../img/searchBtn.png" alt="search icon">
+					</button>
+				</form>
+			</div>
 		</div>
 	</section>
 		<main id="main">
 			<section id="first-sec" class="white-sec">
-				<h1><strong>Free</strong> Your Markets From IT <strong>Complexity</strong></h1>
-				<p>Comverse Policy Studio <br><strong>1st</strong> Ever Marketing-Oriented Policy Tool</p>
-				<a href="" class="main-link">LEARN MORE <img src="../img/btnArrow.png" alt="right arrow icon"></a>
-				<div>
-					<ul>
-						<li id="article-1">
-							<h3>Comverse is value-added service global market leader.</h3>
-							<a href="">
-							<!-- <i class="fa fa-file-text-o" aria-hidden="true"></i>  -->
-							<img src="../img/.png" alt="link icon">Read more</a>
-						</li><
-						<li id="article-2">
-							<h3>Managed services world congress september 18-19 Berlin, Germany</h3>
-							<a href=""><i class="fa fa-file-text-o" aria-hidden="true"></i> Read more</a>
-						</li>
-						<li id="article-3">
-							<h3>Comverse: Enabling a world of connected possibilities</h3>
-							<a href=""><i class="fa fa-play-circle" aria-hidden="true"></i> Watch Now</a>
-						</li>
-					</ul>
+				<div class="padding">
+					<h1><strong>Free</strong> Your Markets From IT <strong>Complexity</strong></h1>
+					<p>Comverse Policy Studio <br><strong>1st</strong> Ever Marketing-Oriented Policy Tool</p>
+					<a href="" class="main-link">LEARN MORE <img src="../img/btnArrow.png" alt="right arrow icon"></a>
+					<div>
+						<ul>
+							<li id="article-1">
+								<h3>Comverse is value-added service global market leader.</h3>
+								<a href="">
+								<!-- <i class="fa fa-file-text-o" aria-hidden="true"></i>  -->
+								<img src="../img/.png" alt="link icon">Read more</a>
+							</li><
+							<li id="article-2">
+								<h3>Managed services world congress september 18-19 Berlin, Germany</h3>
+								<a href=""><i class="fa fa-file-text-o" aria-hidden="true"></i> Read more</a>
+							</li>
+							<li id="article-3">
+								<h3>Comverse: Enabling a world of connected possibilities</h3>
+								<a href=""><i class="fa fa-play-circle" aria-hidden="true"></i> Watch Now</a>
+							</li>
+						</ul>
+					</div>
 				</div>
 			</section>
 			<section class="white-sec" id="second-sec">
@@ -80,7 +84,7 @@
 					<li>
 						<p><span class="marked-date"><span class="day">04</span> <br> SEP</span> Comverse Regains Lead in Convergent Charging Market Regains Lead in</p>
 						<a href=""><img src="../img/eventListIconEvents.png" alt="events icon"> All events</a>
-					</li>				
+					</li>
 					<li>
 						<p><span class="marked-date"><span class="day">04</span> <br> SEP</span> Comverse Regains Lead in Convergent Charging Market Regains Lead in</p>
 						<a href=""><img src="../img/eventListIconEvents.png" alt="events icon"> All events</a>
@@ -154,7 +158,7 @@
 					<li><a href="">Rich Communication Suite (RSC)</a></li>
 					<li><a href="">Social Media</a></li>
 					<li><a href=""></a>4G/LTE</li>
-				</dl>	
+				</dl>
 				<dl>
 					<dd>PRODUCTS & SERVICES</dd>
 					<li><a href="">Billing</a></li>
