--- a/routes/index.html
+++ b/routes/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/html">
 <head>
 	<title>comverse</title>
 	<meta charset="UTF-8">
@@ -23,11 +23,12 @@
 						<option value="HE">HE</option>
 					</select>
 					<label for="login">Customer login</label>
-					<input id="login"></input>
-					<button type="submit">
-						<!-- <i class="fa fa-search" aria-hidden="true"></i> -->
-						<img src="../img/icons/searchBtn.png" alt="search icon">
-					</button>
+					<!--<div id="submit">-->
+						<input id="login">
+						<button type="submit">
+							<img src="../img/icons/searchBtn.png" alt="search icon">
+						</button>
+					<!--</div>-->
 				</form>
 			</div>
 		</div>
@@ -149,56 +150,57 @@
 				<a href="" class="main-link">All 256 success stories</a>
 			</aside>
 		</main>
-		<div id="bottom" class="white-sec">
-			<section>
-				<dl>
-					<dd>KEY SOLUTIONS</dd>
-					<li><a href="">Monetizig Data</a></li>
-					<li><a href="">Over the Top (OTT)</a></li>
-					<li><a href="">Machine to Machine (M2M)</a></li>
-					<li><a href="">Cloud Computing</a></li>
-					<li><a href="">Managed Services</a></li>
-					<li><a href="">Customer Experince Management</a></li>
-					<li><a href="">Rich Communication Suite (RSC)</a></li>
-					<li><a href="">Social Media</a></li>
-					<li><a href=""></a>4G/LTE</li>
-				</dl>
-				<dl>
-					<dd>PRODUCTS & SERVICES</dd>
-					<li><a href="">Billing</a></li>
-					<li><a href="">VAS</a></li>
-					<li><a href="">Mobile Internet</a></li>
-					<li><a href="">Global Services</a></li>
-					<li><a href="">Training Services</a></li>
-				</dl>
-				<dl>
-					<dd>COMPANY</dd>
-					<li><a href="">executive profiles</a></li>
-					<li><a href="">clients</a></li>
-					<li><a href="">investors</a></li>
-					<li><a href="">partners</a></li>
-					<li><a href="">corporate responsibility</a></li>
-					<li><a href="">industry involvement</a></li>
-					<li><a href="">careers</a></li>
-				</dl>
-			</section>
-			<!--<aside>-->
-				<article>
-					<a class="title1" href="">LATEST BLOG POSTS</a>
-					<p><span>18<br>July</span>Comverse regains lead in convergent charging market</p>
-				</article>
-				<form method="post">
-					<label for="sign-up" class="title1">SUBSCRIBE TO COMVERSE</label>
-					<br>
-					<input placeholder="user@gmail.com">
-					<button class="blue-bg" type="submit">SIGN UP</button>
-				</form>
-				<div id="social-imgs">
-					<img src="../img/social/socialMenuIcon-youtube.png" alt="social icon">
-					<img src="../img/social/socialMenuIcon-twitter.png" alt="social icon">
-					<img src="../img/social/socialMenuIcon-linkdin.png" alt="social icon">
+		<section id="bottom">
+			<div class="white-sec padding">
+				<section>
+					<dl>
+						<dd>KEY SOLUTIONS</dd>
+						<li><a href="">Monetizig Data</a></li>
+						<li><a href="">Over the Top (OTT)</a></li>
+						<li><a href="">Machine to Machine (M2M)</a></li>
+						<li><a href="">Cloud Computing</a></li>
+						<li><a href="">Managed Services</a></li>
+						<li><a href="">Customer Experince Management</a></li>
+						<li><a href="">Rich Communication Suite (RSC)</a></li>
+						<li><a href="">Social Media</a></li>
+						<li><a href=""></a>4G/LTE</li>
+					</dl>
+					<dl>
+						<dd>PRODUCTS & SERVICES</dd>
+						<li><a href="">Billing</a></li>
+						<li><a href="">VAS</a></li>
+						<li><a href="">Mobile Internet</a></li>
+						<li><a href="">Global Services</a></li>
+						<li><a href="">Training Services</a></li>
+					</dl>
+					<dl>
+						<dd>COMPANY</dd>
+						<li><a href="">executive profiles</a></li>
+						<li><a href="">clients</a></li>
+						<li><a href="">investors</a></li>
+						<li><a href="">partners</a></li>
+						<li><a href="">corporate responsibility</a></li>
+						<li><a href="">industry involvement</a></li>
+						<li><a href="">careers</a></li>
+					</dl>
+				</section>
+				<div id="bottom-right">
+					<article>
+						<a class="title1" href="">LATEST BLOG POSTS</a>
+						<p><span>18<br>July</span>Comverse regains lead in convergent charging market</p>
+					</article>
+					<form method="post">
+						<label for="sign-up" class="title1">SUBSCRIBE TO COMVERSE</label>
+						<input placeholder="user@gmail.com">
+						<button class="blue-bg" type="submit">SIGN UP</button>
+					</form>
+					<div id="social-imgs">
+						<img src="../img/social/socialMenuIcon-youtube.png" alt="social icon">
+						<img src="../img/social/socialMenuIcon-twitter.png" alt="social icon">
+						<img src="../img/social/socialMenuIcon-linkdin.png" alt="social icon">
+					</div>
 				</div>
-			<!--</aside>-->
-		</div>
+			</div>
+		</section>
 	</body>
 </html>
