--- a/routes/index.html
+++ b/routes/index.html
@@ -81,14 +81,14 @@
 					<dd>NEWS</dd>
 					<li>
 						<p><span class="marked-date"><span class="day">04</span> <br> SEP</span> Comverse Regains Lead in Convergent Charging Market Regains Lead in</p>
-						<a href=""><img src="../img/events/eventListIconNews.png" alt="news icon"> All news</a>
+						<a href=""><img id="news-image" src="../img/events/eventListIconNews.png" alt="news icon"> All news</a>
 					</li>
 				</dl>
 				<dl>
 					<dd>EVENTS</dd>
 					<li>
 						<p><span class="marked-date"><span class="day">04</span> <br> SEP</span> Comverse Regains Lead in Convergent Charging Market Regains Lead in</p>
-						<a href=""><img src="../img/events/eventListIconEvents.png" alt="events icon"> All events</a>
+						<a href=""><img id="events-image" src="../img/events/eventListIconEvents.png" alt="events icon"> All events</a>
 					</li>
 					<li>
 						<p><span class="marked-date"><span class="day">04</span> <br> SEP</span> Comverse Regains Lead in Convergent Charging Market Regains Lead in</p>
