some changes in success stories section

--- a/routes/index.html
+++ b/routes/index.html
@@ -100,52 +100,57 @@
 				<h2>SUCCESS STORIES</h2>
 				<article>
 					<section>
+						<img src="../img/success-stories/CB-JP-face.png" alt="story image" class="story-img">
+						<p><img src="../img/icons/quote-grey.png"> BTC, a full-service provider on the bahamas depends on comverse solut...
+							<img src="../img/icons/quote-grey.png"></p>
+					</section>
+					<footer>
+						<a href="">JONATHAN PIERCE</a>
+						<br>
+						<h4>Group Mobile Architect</h4>
+						<img src="../img/success-stories/cable_wireless_w100px_X_h42px2.jpg" alt="cable-wireless icon">
+						<a href=""><img src="../img/success-stories/3mob_w108px_X_h95px.jpg" alt="Mob-icon"></a>
+					</footer>
+				</article>
+					<ul>
+						<li><a href=""><img src="../img/success-stories/mts_w108px_X_h95px.jpg" alt="logo"></a></li>
+						<li><a href=""><img src="../img/success-stories/Tata_Sky_w108px_X_h95px.jpg" alt="Tata logo"></a></li>
+						<li><a href=""><img src="../img/success-stories/upc_w108px_X_h95px.jpg" alt="UPC logo"></a></li>
+					</ul>
+					<ul>
+						<li><a href=""><img src="../img/success-stories/MAX_telecom_w108px_X_h95.jpg" alt="logo"></a></li>
+						<li><a href=""><img src="../img/success-stories/Kyivstarw_w108px_X_h95.jpg" alt="logo"></a></li>
+						<li><a href=""><img src="../img/success-stories/VIDEOCON_w108px_X_h95px.jpg" alt="logo"></a></li>
+					</ul>
+				<article>
+					<section>
 						<img src="../img/success-stories/JT-GM-face.png" alt="story image" class="story-img">
-						<p><img src="../img/icons/quote-grey.png"> We have very good and very warm relations with Comverse. We always achieved...</p>
+						<p><img src="../img/icons/quote-grey.png">THe expectations of Jersey Telcom have been
+							completely met by Comvers... <img src="../img/icons/quote-grey.png">
+						</p>
 					</section>
 					<footer>
-						<a href="">SERGEY KOROTYCH</a>
+						<a href="">GRAEME MILLER</a>
 						<br>
-						<h4>Deputy CTO,3 Mob Ukraine</h4>
-						<a href=""><img src="../img/success-stories/3mob_w108px_X_h95px.jpg" alt="Mob-icon"></a>
-					</footer>
-				</article>
-					<ul>
-						<li><a href=""><img src="" alt="logo"></a></li>
-						<li><a href=""><img src="" alt="logo"></a></li>
-						<li><a href=""><img src="" alt="logo"></a></li>
-					</ul>
-					<ul>
-						<li><a href=""><img src="" alt="logo"></a></li>
-						<li><a href=""><img src="" alt="logo"></a></li>
-						<li><a href=""><img src="" alt="logo"></a></li>
-					</ul>
-				<article>
-					<section>
-						<img src="" alt="story image" class="story-img">
-						<p>Comverse has demonstrated that they are partners, not just suppliers, because they understand our needs, our situation; together we are...</p>
-					</section>
-					<footer>
-						<a href="">ADALE KEHASSAN</a>
-						<br>
-						<h4>CIO of Multi-links</h4>
-						<a href=""><img src="../img/success-stories/3mob_w108px_X_h95px.jpg" alt="Mob-icon"></a>
+						<h4>CEO</h4>
+						<img src="../img/success-stories/Jersey_Telecom_w100px_X_h42px.jpg" alt="Jersey Telecom logo">
 					</footer>
 				</article>
 				<article>
 					<section>
-						<p><img src="../img/icons/quote-grey.png">Comverse has been able to fully deliver what we want and we have peers...</p>
+						<p><img src="../img/icons/quote-grey.png"> Comverse has demonstrated that they are partners not just suppliers...
+							<img src="../img/icons/quote-grey.png"></p>
 					</section>
 					<footer>
-						<a href="" class="story-link">SERGEY KOROTYCH</a>
+						<a href="" class="story-link">ADDALE KEHASSAN</a>
 						<br>
-						<h4>Deputy CTO,3 Mob Ukraine</h4>
-						<a href=""><img src="../img/success-stories/3mob_w108px_X_h95px.jpg" alt="Mob-icon"></a>
+						<h4>CIO</h4>
+						<a href=""><img src="../img/success-stories/multilinks.jpg" alt="multilinks logo"></a>
 					</footer>
 				</article>
 				<div>
-					<a href=""><img src="" alt="logo"></a>
-					<a href=""><img src="" alt="logo"></a>
+					<a href=""><img src="../img/success-stories/3mob_w108px_X_h95px.jpg" alt="Mob logo"></a>
+					<a href=""><img src="../img/success-stories/play_w108px_X_h95px.jpg" alt="Play logo"></a>
 				</div>
 				<a href="" class="main-link">All 256 success stories</a>
 			</aside>
