fix position and more

--- a/routes/index.html
+++ b/routes/index.html
@@ -34,9 +34,9 @@
 		</div>
 	</section>
 		<main id="main">
-			<section id="first-sec" class="white-sec">
+			<section id="first-sec" class="white-sec bg">
 				<div class="padding">
-					<h1><strong>Free</strong> Your Markets From IT <strong>Complexity</strong></h1>
+					<h1><strong>Free</strong> Your Markets From <br>IT <strong>Complexity</strong></h1>
 					<p>Comverse Policy Studio <br><strong>1st</strong> Ever Marketing-Oriented Policy Tool</p>
 					<a href="" class="main-link">LEARN MORE <img src="../img/icons/btnArrow.png" alt="right arrow icon"></a>
 					<div>
@@ -75,7 +75,7 @@
 					<a href="" class="main-link">See all of our solutions <img src="../img/icons/btnArrow.png" alt="right arrow icon"></a>
 				</div>
 			</section>
-			<section class="white-sec" id="third-sec">
+			<section class="white-sec bg" id="third-sec">
 				<h2>WHAT'S HAPPENING AT COMVERSE?</h2>
 				<dl>
 					<dd>NEWS</dd>
