stile - success stories section

--- a/routes/index.html
+++ b/routes/index.html
@@ -82,7 +82,7 @@
 						<dl>
 							<dd>NEWS</dd>
 							<li>
-								<p><span class="marked-date"><span class="day">04</span> <br> SEP</span> Comverse Regains Lead in Convergent Charging Market Regains Lead in</p>
+								<p><span class="marked-date"><span class="day">04</span> <br><span class="month"> SEP </span></span> Comverse Regains Lead in Convergent Charging Market Regains Lead in</p>
 								<a href=""><img id="news-image" src="../img/events/eventListIconNews.png" alt="news icon"> All news</a>
 							</li>
 						</dl>
@@ -91,11 +91,11 @@
 						<dl>
 							<dd>EVENTS</dd>
 							<li>
-								<p><span class="marked-date"><span class="day">04</span> <br> SEP</span> Comverse Regains Lead in Convergent Charging Market Regains Lead in</p>
+								<p><span class="marked-date"><span class="day">04</span> <br><span class="month"> SEP </span></span> Comverse Regains Lead in Convergent Charging Market Regains Lead in</p>
 								<a href=""><img id="events-image" src="../img/events/eventListIconEvents.png" alt="events icon"> All events</a>
 							</li>
 							<li>
-								<p><span class="marked-date"><span class="day">04</span> <br> SEP</span> Comverse Regains Lead in Convergent Charging Market Regains Lead in</p>
+								<p><span class="marked-date"><span class="day">04</span> <br><span class="month"> SEP </span></span> Comverse Regains Lead in Convergent Charging Market Regains Lead in</p>
 								<a href=""><img src="../img/events/eventListIconEvents.png" alt="events icon"> All events</a>
 							</li>
 						</dl>
@@ -103,62 +103,63 @@
 				</div>
 			</section>
 			<aside id="aside-sec">
-				<h2 class="sec-title">SUCCESS STORIES</h2>
-				<article>
-					<section>
-						<img src="../img/success-stories/CB-JP-face.png" alt="story image" class="story-img">
-						<p><img src="../img/icons/quote-grey.png"> BTC, a full-service provider on the bahamas depends on comverse solut...
-							<img src="../img/icons/quote-grey.png"></p>
-					</section>
-					<footer>
-						<a href="">JONATHAN PIERCE</a>
-						<br>
-						<h4>Group Mobile Architect</h4>
+				<div class="padding">
+					<h2 class="sec-title">SUCCESS STORIES</h2>
+					<article>
+						<section class="story">
+							<img src="../img/success-stories/CB-JP-face.png" alt="story image" class="story-img">
+							<p><img src="../img/icons/quote-grey.png"> BTC, a full-service provider on the bahamas depends on comverse solut...
+								<img src="../img/icons/quote-grey.png"></p>
+						</section>
+						<footer>
+							<h3>JONATHAN PIERCE</h3>
+							<br>
+							<h4>Group Mobile Architect</h4>
+						</footer>
 						<img src="../img/success-stories/cable_wireless_w100px_X_h42px2.jpg" alt="cable-wireless icon">
-						<a href=""><img src="../img/success-stories/3mob_w108px_X_h95px.jpg" alt="Mob-icon"></a>
-					</footer>
-				</article>
-					<ul>
-						<li><a href=""><img src="../img/success-stories/mts_w108px_X_h95px.jpg" alt="logo"></a></li>
-						<li><a href=""><img src="../img/success-stories/Tata_Sky_w108px_X_h95px.jpg" alt="Tata logo"></a></li>
-						<li><a href=""><img src="../img/success-stories/upc_w108px_X_h95px.jpg" alt="UPC logo"></a></li>
-					</ul>
-					<ul>
-						<li><a href=""><img src="../img/success-stories/MAX_telecom_w108px_X_h95.jpg" alt="logo"></a></li>
-						<li><a href=""><img src="../img/success-stories/Kyivstarw_w108px_X_h95.jpg" alt="logo"></a></li>
-						<li><a href=""><img src="../img/success-stories/VIDEOCON_w108px_X_h95px.jpg" alt="logo"></a></li>
-					</ul>
-				<article>
-					<section>
-						<img src="../img/success-stories/JT-GM-face.png" alt="story image" class="story-img">
-						<p><img src="../img/icons/quote-grey.png">THe expectations of Jersey Telcom have been
-							completely met by Comvers... <img src="../img/icons/quote-grey.png">
-						</p>
-					</section>
-					<footer>
-						<a href="">GRAEME MILLER</a>
-						<br>
-						<h4>CEO</h4>
-						<img src="../img/success-stories/Jersey_Telecom_w100px_X_h42px.jpg" alt="Jersey Telecom logo">
-					</footer>
-				</article>
-				<article>
-					<section>
-						<p><img src="../img/icons/quote-grey.png"> Comverse has demonstrated that they are partners not just suppliers...
-							<img src="../img/icons/quote-grey.png"></p>
-					</section>
-					<footer>
-						<a href="" class="story-link">ADDALE KEHASSAN</a>
-						<br>
-						<h4>CIO</h4>
-						<a href=""><img src="../img/success-stories/multilinks.jpg" alt="multilinks logo"></a>
-					</footer>
-				</article>
-				<div>
-					<a href=""><img src="../img/success-stories/3mob_w108px_X_h95px.jpg" alt="Mob logo"></a>
-					<a href=""><img src="../img/success-stories/play_w108px_X_h95px.jpg" alt="Play logo"></a>
+					</article>
+						<ul>
+							<li><a href=""><img src="../img/success-stories/mts_w108px_X_h95px.jpg" alt="logo"></a></li>
+							<li><a href=""><img src="../img/success-stories/Tata_Sky_w108px_X_h95px.jpg" alt="Tata logo"></a></li>
+							<li><a href=""><img src="../img/success-stories/upc_w108px_X_h95px.jpg" alt="UPC logo"></a></li>
+						</ul>
+						<ul>
+							<li><a href=""><img src="../img/success-stories/MAX_telecom_w108px_X_h95.jpg" alt="logo"></a></li>
+							<li><a href=""><img src="../img/success-stories/Kyivstarw_w108px_X_h95.jpg" alt="logo"></a></li>
+							<li><a href=""><img src="../img/success-stories/VIDEOCON_w108px_X_h95px.jpg" alt="logo"></a></li>
+						</ul>
+					<article class="story">
+						<section>
+							<img src="../img/success-stories/JT-GM-face.png" alt="story image" class="story-img">
+							<p><img src="../img/icons/quote-grey.png">THe expectations of Jersey Telcom have been
+								completely met by Comvers... <img src="../img/icons/quote-grey.png">
+							</p>
+						</section>
+						<footer>
+							<h3>GRAEME MILLER</h3>
+							<br>
+							<h4>CEO</h4>
+							<img src="../img/success-stories/Jersey_Telecom_w100px_X_h42px.jpg" alt="Jersey Telecom logo">
+						</footer>
+					</article>
+					<article class="story">
+						<section>
+							<p><img src="../img/icons/quote-grey.png"> Comverse has demonstrated that they are partners not just suppliers...
+								<img src="../img/icons/quote-grey.png"></p>
+						</section>
+						<footer>
+							<h3>ADDALE KEHASSAN</h3>
+							<br>
+							<h4>CIO</h4>
+							<img src="../img/success-stories/multilinks.jpg" alt="multilinks logo">
+						</footer>
+					</article>
+					<div>
+						<img src="../img/success-stories/3mob_w108px_X_h95px.jpg" alt="Mob logo">
+						<img src="../img/success-stories/play_w108px_X_h95px.jpg" alt="Play logo">
+					</div>
+					<a href="" class="main-link">All 256 success stories</a>
 				</div>
-				<a href="" class="main-link">All 256 success stories</a>
 			</aside>
 		</main>
 		<section id="bottom">
