--- a/routes/index.html
+++ b/routes/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>comverse</title>
 	<meta charset="UTF-8">
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800italic,800' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="../node_modules/normalize.css/normalize.css">
 	<link rel="stylesheet" type="text/css" href="../css/font-awesome-4.6.1/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
