bottom section almost done

--- a/routes/index.html
+++ b/routes/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 <body>
-	<section id="top-sec">
+	<section id="top-sec" class="bg">
 		<div>
 			<div class="padding">
 				<a href=""><img src="../img/logo/comverse-logo.png" alt="comverse logo"></a>
@@ -39,7 +39,7 @@
 				<div class="padding">
 					<h1><strong>Free</strong> Your Markets From <br>IT <strong>Complexity</strong></h1>
 					<p>Comverse Policy Studio <br><strong>1st</strong> Ever Marketing-Oriented Policy Tool</p>
-					<a href="" class="main-link">LEARN MORE <img src="../img/icons/btnArrow.png" alt="right arrow icon"></a>
+					<a href="" class="main-link">Learn more <img src="../img/icons/btnArrow.png" alt="right arrow icon"></a>
 					<div>
 						<ul>
 							<li id="article-1">
@@ -84,7 +84,7 @@
 							<dd>NEWS</dd>
 							<li>
 								<p><span class="marked-date"><span class="day">04</span> <br><span class="month"> SEP </span></span> Comverse Regains Lead in Convergent Charging Market Regains Lead in</p>
-								<a href=""><img id="news-image" src="../img/events/eventListIconNews.png" alt="news icon"> All news</a>
+								<a href=""><img class="news-image" src="../img/events/eventListIconNews.png" alt="news icon"> All news</a>
 							</li>
 						</dl>
 					</div>
@@ -93,17 +93,17 @@
 							<dd>EVENTS</dd>
 							<li>
 								<p><span class="marked-date"><span class="day">04</span> <br><span class="month"> SEP </span></span> Comverse Regains Lead in Convergent Charging Market Regains Lead in</p>
-								<a href=""><img id="events-image" src="../img/events/eventListIconEvents.png" alt="events icon"> All events</a>
+								<a href=""><img class="events-image" src="../img/events/eventListIconEvents.png" alt="events icon"> All events</a>
 							</li>
 							<li>
 								<p><span class="marked-date"><span class="day">04</span> <br><span class="month"> SEP </span></span> Comverse Regains Lead in Convergent Charging Market Regains Lead in</p>
-								<a href=""><img src="../img/events/eventListIconEvents.png" alt="events icon"> All events</a>
+								<a href=""><img class="events-image" src="../img/events/eventListIconEvents.png" alt="events icon"> All events</a>
 							</li>
 						</dl>
 					</div>
 				</div>
 			</section>
-			<aside id="aside-sec">
+			<aside id="aside-sec" class="bg">
 				<div class="padding">
 					<h2 class="sec-title">SUCCESS STORIES</h2>
 					<article>
@@ -163,7 +163,7 @@
 				</div>
 			</aside>
 		</main>
-		<section id="bottom">
+		<section id="bottom" class="bg">
 			<div class="white-sec padding">
 				<section>
 					<dl>
@@ -212,6 +212,9 @@
 						<img src="../img/social/socialMenuIcon-twitter.png" alt="social icon">
 						<img src="../img/social/socialMenuIcon-linkdin.png" alt="social icon">
 					</div>
+				</div>
+				<div id="copy">
+					<p>copyright&copy;2012 Comverse.inc | privacy policy</p>
 				</div>
 			</div>
 		</section>
